# web-ca

./: .gitignore  CHANGELOG.md  CLAUDE.md  Cancer-AutoMata-SPA-PRD.md  KICKOFF.md  README.md  biome.json  index.html  package-lock.json  package.json  tsconfig.app.json  vite.config.ts  vue.config.js
core-wasm/: Cargo.toml
core-wasm/.cargo/: config.toml
core-wasm/src/: grid.rs  lib.rs  neighbors.rs  rng.rs  sim.rs
css/: chunk-vendors.31002dbf.css  chunk-vendors.3482c513.css  chunk-vendors.467eb75a.css  chunk-vendors.bfcdeab4.css  chunk-vendors.d018c3be.css  chunk-vendors.e0853e3f.css  chunk-vendors.feaafb1d.css
js/: 0.00fd4ac2.worker.js  0.00fd4ac2.worker.js.map  0.1527ebe6.worker.js  0.1527ebe6.worker.js.map  0.24991083.worker.js  0.24991083.worker.js.map  0.41b22ae0.worker.js  0.41b22ae0.worker.js.map  0.859d1778.worker.js  0.859d1778.worker.js.map  0.e725f1c9.worker.js  0.e725f1c9.worker.js.map  app.04e6308c.js  app.04e6308c.js.map  app.1304679a.js  app.1304679a.js.map  app.1f6a4b9d.js  app.1f6a4b9d.js.map  app.4d5b1f4b.js  app.4d5b1f4b.js.map  app.9e36401a.js  app.9e36401a.js.map  app.a1e39244.js  app.a1e39244.js.map  app.b09f02d3.js  app.b09f02d3.js.map  app.cd63763c.js  app.cd63763c.js.map  app.d0225f97.js  app.d0225f97.js.map  app.d705e2ce.js  app.d705e2ce.js.map  app.db155d93.js  app.db155d93.js.map  app.e1671080.js  app.e1671080.js.map  app.f85846c8.js  app.f85846c8.js.map  chunk-vendors.29abf597.js  chunk-vendors.29abf597.js.map  (+15 more)
public/: _headers
src/: App.tsx  App.vue  app.css  main.js
test/: grid_tests.js  params_tests.js  simulation_tests.js
(+102 files in other folders)
