[package]
name = "core-wasm"
version = "0.1.0"
edition = "2021"
description = "Cancer AutoMata compute core (cellular automaton) compiled to WebAssembly."
license = "MIT"
repository = "https://github.com/Eclion/Cancer-AutoMata"
publish = false

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"

[profile.release]
opt-level = 3
lto = true
